--- a/main.html
+++ b/main.html
@@ -4,9 +4,45 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Semantic Tables and Media</title>
 </head>
 
 <body>
+	<table>
+		<thead>
+			
+			<h1>Semantic Tables and Media</h1>
+			<th>Roll Number</th>
+			<th>Name</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Deepak</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>adarsh</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>yash</td>
+			</tr>
+			
+		</tbody>
+	</table>
+	<h1>List of medias</h1>
+	<ol>
+		<img src ="https://picsum.photos/id/123/200/300"alt="not support in your device">
+	</ol>
+	<ol>
+		<video width="320" height="240"controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">  
+	</ol>
+	<ol>
+		<audio controls>
+			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+	</ol>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
