--- a/main.html
+++ b/main.html
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-	<table>
+	<table border="1">
 		<thead>
-			
-			<h1>Semantic Tables and Media</h1>
 			<th>Roll Number</th>
 			<th>Name</th>
 		</thead>
@@ -33,15 +31,14 @@
 	</table>
 	<h1>List of medias</h1>
 	<ol>
-		<img src ="https://picsum.photos/id/123/200/300"alt="not support in your device">
-	</ol>
-	<ol>
-		<video width="320" height="240"controls>
-		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">  
-	</ol>
-	<ol>
-		<audio controls>
+		<li><img src ="https://picsum.photos/id/123/200/300"alt="not support in your device"></li>
+		<li><video width="320" height="240"controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+		</video></li>
+		
+		<li><audio controls>
 			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+		</audio></li>
 	</ol>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
