--- a/main.html
+++ b/main.html
@@ -31,14 +31,21 @@
 	</table>
 	<h1>List of medias</h1>
 	<ol>
-		<li><img src ="https://picsum.photos/id/123/200/300"alt="not support in your device"></li>
-		<li><video width="320" height="240"controls>
+		<li>
+			<img src ="https://picsum.photos/id/123/200/300" alt="Sample image">
+		</li>
+		<li>
+		<video width="320" height="240" controls>
 		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-		</video></li>
-		
-		<li><audio controls>
+        your browser does not support the video tag.
+		</video>
+		</li>
+		<li>
+			<audio controls>
 			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-		</audio></li>
+				your browser does not suppport the audio tag.
+		</audio>
+	   </li>
 	</ol>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
